--- a/WolvenKit/Forms/MVVM/frmMain.resx
+++ b/WolvenKit/Forms/MVVM/frmMain.resx
@@ -154,7 +154,7 @@
   <metadata name="visualStudioToolStripExtender2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>924, 17</value>
   </metadata>
-  <metadata name="modexplorerSlave.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="watcher.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1145, 17</value>
   </metadata>
 </root>
